@@ -57,6 +57,8 @@ Version 6.5 - not yet released
   - inverse colors for wind arrow infobox and flarm gauge (#2337)
 * track friends via internet connection (SkyLines live tracking)
 * SkyLines tracking enabled on Windows CE
+* Android
+  - check if external storage is mounted
 * Documentation
   - started a French translation of the manual
   - included an almost complete German translation of the manual
